2011-05-02  Alok Priyadarshi  <alokp@chromium.org>

        Reviewed by Dimitri Glazkov.

        Chromium windows build is broken due to r85395
        https://bugs.webkit.org/show_bug.cgi?id=59945
        
        Include SecurityOrigin.h in IDBFactoryBackendProxy.cpp

        * src/IDBFactoryBackendProxy.cpp:

2011-04-30  Mihai Parparita  <mihaip@chromium.org>

        Reviewed by Eric Seidel.

        V8Proxy.h shouldn't include SecurityOrigin.h
        https://bugs.webkit.org/show_bug.cgi?id=59859

        Add SecurityOrigin.h includes to places that were relying on transitive
        includes.

        * src/ApplicationCacheHost.cpp:
        * src/WebGeolocationPermissionRequest.cpp:

2011-04-29  Chris Evans  <cevans@chromium.org>

        Reviewed by Adam Barth.

        Add WebCore::Setting to block displaying and/or running insecure content on secure pages
        https://bugs.webkit.org/show_bug.cgi?id=58378

        * public/WebSettings.h:
        * src/WebSettingsImpl.cpp:
        (WebKit::WebSettingsImpl::setAllowDisplayOfInsecureContent):
        (WebKit::WebSettingsImpl::setAllowRunningOfInsecureContent):
        * src/WebSettingsImpl.h:
        Simple plumbing for the new boolean settings.

2011-04-29  Kenneth Russell  <kbr@google.com>

        Unreviewed build fix. Skip WebPageNewSerializerTest.cpp in Windows multi-DLL build.

        * WebKit.gyp:

2011-04-28  Evan Martin  <evan@chromium.org>

        Reviewed by Tony Chang.

        [chromium] support components build on Linux
        https://bugs.webkit.org/show_bug.cgi?id=59748

        * WebKit.gyp: adjust tests to not be Windows-specific.
        * public/WebCommon.h: add #defines to support Linux.
        * public/linux/WebFontRenderStyle.h: expose Linux-specific API.
        * tests/RunAllTests.cpp: adjust ifdefs to not be Windows-specific.

2011-04-29  Vsevolod Vlasov  <vsevik@chromium.org>

        Reviewed by Pavel Feldman.
