@@ -1,3 +1,13 @@
+2011-05-03  Pavel Feldman  <pfeldman@google.com>
+
+        Reviewed by Yury Semikhatsky.
+
+        Web Inspector: [remote debugging] use document.title to set window name.
+        https://bugs.webkit.org/show_bug.cgi?id=60012
+
+        * src/js/DevTools.js:
+        (WebInspector.InspectorFrontendHostStub.prototype.inspectedURLChanged):
+
 2011-05-02  Alok Priyadarshi  <alokp@chromium.org>
 
         Reviewed by Dimitri Glazkov.
